# rtrace

./: .gitignore  Cargo.toml  LICENSE
src/: defs.rs  lib.rs  ray.rs  tools.rs
src/basic/: colorcalculator.rs  illuminator.rs  intersector.rs  lightsource.rs  materials.rs  mod.rs  model.rs  postprocessing.rs  rendering.rs
src/basic/postprocessing/: base.rs  filter.rs  gi.rs  mod.rs
src/core/: color.rs  execution.rs  intersection.rs  light.rs  material.rs  mod.rs  model.rs  propagation.rs  ray.rs  scene.rs  view.rs  world.rs  worldview.rs
