[package]
name = "rtrace"
version = "0.0.1"
authors = ["Nyári Dávid Tamás <nyaridavid@gmail.com>"]

[dependencies]
nalgebra = "~0"
num = "~0"
approx = "~0"
float-cmp = "~0"
num-traits = "~0"
rand = "~0"
uuid = { version = "~0", features = ["v3", "v4", "v5"] }

[profile.dev]
opt-level = 0

[profile.release]
debug = true
opt-level = 3
